start screen mobile overflow fix

--- a/stylesheets/start_game.css
+++ b/stylesheets/start_game.css
@@ -1,16 +1,17 @@
+.start_game__screen {
+  position: relative;
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  overflow: scroll;
+}
+
 .start_game__bg {
   position: absolute;
   display: block;
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-}
-
-.start_game__screen {
-  position: relative;
-  display: block;
-  width: 100vw;
-  height: auto;
 }
 
 .start_game__wrapper {
